# imputeSCOPA

./: CMakeLists.txt  README.md  standalone.cpp
R/: csImputeSCOPA.R  dlb.R  dld.R  qatt.R  qdet.R  qret.R  qrun.R  qrun.R~
R/Rcpp/: csample.cpp
cpp/: main.cpp  scData.cpp  scData.cpp~  scopa.cpp  scutils.cpp
data/: 3phigh_missing.txt
include/: csample.h  scData.h  scopa.h  scutils.h
ranger/: Data.cpp  Data.h  Forest.cpp  Forest.h  ForestRegression.cpp  ForestRegression.h  Tree.cpp  Tree.h  TreeRegression.cpp  TreeRegression.cpp.debug  globals.h
